# neo-infer

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  configuration.md  testing.md
neo_infer/: __init__.py  api.py  cli.py  config.py  conflict_management.py  db.py  incremental_mining.py  incremental_store.py  inference.py  models.py  query.py  rule_management.py  rule_mining.py  trigger_management.py
scripts/: apply_neo4j_schema.py  bench_api_perf.py  bench_index_strategies.py  bench_seed_large.py  neo4j_schema.cypher  smoke_local.sh
tests/: test_api_smoke.py  test_cli.py  test_rule_mining_amie_search.py
