[project]
name = "neo-infer"
version = "0.1.0"
description = "Knowledge graph ILP rule mining and inference service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "neo4j>=5.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[project.scripts]
neo-infer = "neo_infer.cli:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neo_infer*"]
